--- a/CarRental/src/main/resources/templates/login.html
+++ b/CarRental/src/main/resources/templates/login.html
@@ -26,17 +26,17 @@
                 <p>Vui lòng nhập thông tin đăng nhập của bạn.</p>
             </div>
 
-            <div th:if="${param.error != null}" class="auth-alert error">
+            <div th:if="${param.error}" class="auth-alert error">
                 <i class="fas fa-exclamation-circle"></i>
-                <span th:if="${param.error[0] == 'bad_credentials'}">Sai tên đăng nhập hoặc mật khẩu!</span>
-                <span th:if="${param.error[0] == 'disabled'}">Tài khoản đã bị vô hiệu hóa.</span>
-                <span th:if="${param.error[0] == 'true'}">Đăng nhập thất bại.</span>
+                <span>Sai tên đăng nhập hoặc mật khẩu!</span>
             </div>
+
             <div th:if="${param.logout}" class="auth-alert success">
                 <i class="fas fa-check-circle"></i> Bạn đã đăng xuất thành công.
             </div>
+
             <div th:if="${param.registered}" class="auth-alert success">
-                <i class="fas fa-check-circle"></i> Đăng ký thành công! Hãy đăng nhập.
+                <i class="fas fa-check-circle"></i> Đăng ký thành công! Vui lòng đăng nhập.
             </div>
 
             <form th:action="@{/login-process}" method="post" class="login-form">
